# hollow-sync

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  pr-check.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  main.rs  save_manager.rs  utils.rs
src/components/: GameToggle.tsx  HollowButton.tsx  HollowLogo.tsx  HollowPanel.tsx  SaveCard.tsx  SilkParticles.tsx  SwitchTutorial.tsx  TabSlider.tsx  Toast.tsx  ToggleSlider.tsx
