[package]
name = "hollow-sync"
version = "1.1.0"
description = "Hollow Knight & Silksong Save Sync Tool"
authors = ["FiveSkill"]
license = ""
repository = ""
default-run = "hollow-sync"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "dialog-confirm", "path-all", "fs-all", "dialog-save", "dialog-open", "dialog-ask", "dialog-message", "shell-open"] }
tokio = { version = "1", features = ["full"] }
aes = "0.8"
zip = "0.6"
dirs = "5.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
